<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="61dp"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LocationnotReady"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <TextView
            android:id="@+id/longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LocationnotReady"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/findlocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/findme" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/stoplocating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop" />

        <Button
            android:id="@+id/showlocationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Showlocationbtntext" />
    </LinearLayout>

    <ToggleButton
        android:id="@+id/toggle_device_admin"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout3"
        android:layout_centerHorizontal="true"
        android:text="@string/enable_device_admin"
        android:textOff="@string/device_admin_disabled"
        android:textOn="@string/device_admin_enabled" />

    <Button
        android:id="@+id/button_lock_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toggle_device_admin"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        android:text="@string/lock_device" />

    <Button
        android:id="@+id/button_reset_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_lock_device"
        android:layout_below="@+id/button_lock_device"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        android:text="@string/reset_device" />

</RelativeLayout>